resume pdf instead of png, added footer to other pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/berry.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/react-pdf/4.1.0/react-pdf.min.css" integrity="sha512-KDePCH7o57P4gQaP9Kg9WhKiY9H7iogWqJ40zQBe6KrNfEqDSyLbUG1zSN8FQOL6/A8jH2eNarZwFTZvX65Kpw==" crossorigin="anonymous" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,6 +22,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="dist/bundle.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
