fixed resume filename discrepancy

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <iframe src="../src/Resume.pdf" width="100%" height="600px"></iframe>
+    <iframe src="../src/Resume.pdf" width="100%" height="100%"></iframe>
 
     <!--
       This HTML file is a template.
